# prog

admin_dev.pietro/: app.py  extensions.py  forms.py  model.py  pyproject.toml  routes.py  run.py
admin_dev.pietro/instance/: app.db
admin_dev.pietro/static/css/: base.css
admin_dev.pietro/templates/: base.html  busca_tarefas.html  criar_tarefa.html  editar_tarefa.html  index.html  registrar_desenvolvedor.html
